--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -10,10 +10,10 @@
 <div class="container">
   @using (Html.BeginForm())
   {
-    <h4>@Html.LabelFor(model => model.Name)</h4>
-    @Html.TextBoxFor(model => model.Name)
+    <h4>@Html.LabelFor(model => model.MachineName)</h4>
+    @Html.TextBoxFor(model => model.MachineName)
     <br/>
-    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+    @Html.ValidationMessageFor(model => model.MachineName, "", new { @class = "text-danger" })
     <br />
     <input type="submit" value="Submit" class="btn btn-primary"/>
   }
