update controllers for edit/delete

--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -18,5 +18,7 @@
 
 <div class="container">
   <h5>@Html.ActionLink("Add New Engineer", "Create")</h5>
+  <h5>@Html.ActionLink("Edit this Engineer", "Edit")</h5>
+  <h5>@Html.ActionLink("Delete this Engineer", "Delete")</h5>
   <h5>@Html.ActionLink("Home", "Index", "Home")</h5>
 </div>
