--- a/Factory/Views/Engineers/Edit.cshtml
+++ b/Factory/Views/Engineers/Edit.cshtml
@@ -8,7 +8,7 @@
 <hr/>
 
 <div class="container">
-  <h3>Edit this Engineer's details: @Html.DisplayFor(model => model.MachineName)</h3>
+  <h3>Edit this Engineer's details: @Html.DisplayFor(model => model.Name)</h3>
 
   <br/>
 
