--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model Factory.Models.Machine;
+@model Factory.Models.Engineer;
 @using Factory.Models;
 @using System.Collections.Generic;
 
