WIP bug fix for add machine, still looking

--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -32,5 +32,6 @@
 <div class="container">
   <h5>@Html.ActionLink("Edit Engineer", "Edit", new { id = Model.EngineerId })</h5>
   <h5>@Html.ActionLink("Remove Engineer", "Delete", new { id = Model.EngineerId })</h5>
+  <h5>@Html.ActionLink("Add a Machine", "AddMachine", new { id = Model.EngineerId })</h5>
   <h5>@Html.ActionLink("Back to Engineers", "Index")</h5>
 </div>
