--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -32,5 +32,6 @@
 <div class="container">
   <h5>@Html.ActionLink("Edit Machine", "Edit", new { id = Model.MachineId })</h5>
   <h5>@Html.ActionLink("Remove Machine", "Delete", new { id = Model.MachineId })</h5>
+  <h5>@Html.ActionLink("Add an Engineer", "AddEngineer", new { id = Model.MachineId })</h5>
   <h5>@Html.ActionLink("Back to Machines", "Index")</h5>
 </div>
