--- a/Factory/Views/Engineers/AddMachine.cshtml
+++ b/Factory/Views/Engineers/AddMachine.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model Factory.Models.Machine
+@model Factory.Models.Engineer
 
 @using (Html.BeginForm())
 {
@@ -13,5 +13,5 @@
 }
 
 <div class="container">
-  <h5>@Html.ActionLink("Back to machines", "Index")</h5>
+  <h5>@Html.ActionLink("Back to enginners", "Index")</h5>
 </div>
