WIP add middle of bug fix

--- a/Factory/Views/Engineers/AddMachine.cshtml
+++ b/Factory/Views/Engineers/AddMachine.cshtml
@@ -2,7 +2,8 @@
   Layout = "_Layout";
 }
 
-@model Factory.Models.Engineer
+@model Factory.Models.MachineEngineer;
+@using Factory.Models;
 
 @using (Html.BeginForm())
 {
