--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -7,11 +7,13 @@
 @using System.Collections.Generic;
 
 <h1>Engineer Details</h1>
-  <hr />
+<hr />
 
-  <h3>Name of Engineer: @Html.DisplayFor(model => model.Name)</h3>
-  <br />
+<h3>Name of Engineer: @Html.DisplayFor(model => model.Name)</h3>
+<br />
 
+@if (Model != null)
+{
   @if (@Model.JoinEntities.Count == 0)
   {
     <p>This engineer can't do s^&*</p>
@@ -20,14 +22,14 @@
   {
     <h4>This engineer can use the machines below</h4>
     <ul>
-    @foreach (MachineEngineer join in Model.JoinEntities)
+  @foreach (MachineEngineer join in Model.JoinEntities)
       {
         <li>@join.Machine.MachineName</li>
       }
-    </ul>  
+    </ul>
   }
-
-<br/>
+}
+<br />
 
 <div class="container">
   <h5>@Html.ActionLink("Edit Engineer", "Edit", new { id = Model.EngineerId })</h5>
