--- a/Factory/Views/Engineers/AddMachine.cshtml
+++ b/Factory/Views/Engineers/AddMachine.cshtml
@@ -2,17 +2,17 @@
   Layout = "_Layout";
 }
 
-@model Factory.Models.MachineEngineer;
-@using Factory.Models;
 
-@using (Html.BeginForm())
-{
-  @Html.HiddenFor(model => model.MachineId)
-  @Html.Label("Select machine")
-  @Html.DropDownList("MachineId")
-  <input type="submit" value="save" />
-}
+@model Factory.Models.Engineer;
+
+  @using (Html.BeginForm())
+  {
+    @Html.HiddenFor(model => model.EngineerId)
+    @Html.Label("Select machine")
+    @Html.DropDownList("MachineId")
+    <input type="submit" value="save" />
+  }
 
 <div class="container">
-  <h5>@Html.ActionLink("Back to enginners", "Index")</h5>
+  <h5>@Html.ActionLink("Back to Machines", "Index")</h5>
 </div>
