fix submission errors

--- a/Factory/Views/Machines/AddEngineer.cshtml
+++ b/Factory/Views/Machines/AddEngineer.cshtml
@@ -13,5 +13,5 @@
   }
 
 <div class="container">
-  <h5>@Html.ActionLink("Back to Engineers", "Index")</h5>
+  <h5>@Html.ActionLink("Back to Machines", "Index")</h5>
 </div>
